# Aether

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build.yml
aether.lv2/: aether.ttl  manifest.ttl
cmake/: TargetGlad.cmake  TargetNanoVG.cmake  TargetPugl.cmake
resources/: aether.ttl.in  manifest.ttl.in
src/DSP/: CMakeLists.txt  aether_dsp.cpp  aether_dsp.hpp  aether_dsp_lv2.cpp  delay.hpp  delayline.hpp  diffuser.hpp  filters.hpp
src/DSP/utils/: lfo.hpp  math.hpp  random.hpp  ringbuffer.hpp
src/UI/: CMakeLists.txt  aether_ui.cpp  aether_ui.hpp  aether_ui_lv2.cpp  gl_helper.cpp  gl_helper.hpp  style.hpp  ui_tree.cpp  ui_tree.hpp
src/UI/utils/: fft.hpp  strings.hpp
src/common/: bit_ops.hpp  constants.hpp  parameters.hpp  utils.hpp
src/polyfills/: bit  numbers
tests/: CMakeLists.txt  bm_aether.cpp  bm_diffuser.cpp  bm_filters.cpp  test_lfo.cpp
tests/benchmarks/: CMakeLists.txt  bm_aether.cpp  bm_delay.cpp  bm_diffuser.cpp  bm_filters.cpp  truncate_denormals.hpp
tests/tests/: CMakeLists.txt  test_common.cpp  test_diffuser.cpp  test_lfo.cpp  test_output.cpp  test_rng.cpp
usermanual/: USERMANUAL.md
